# RAG-GDrive-system

./: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  local_test.py  netlify.toml  pyproject.toml  requirements.txt  requirements2.txt  setup.py
backend/rag_system/: __init__.py  main.py
backend/rag_system/api/: __init__.py  app.py  middleware.py
backend/rag_system/api/routes/: __init__.py  documents.py  health.py  query.py
backend/rag_system/cli/: commands.py  utils.py
backend/rag_system/config/: __init__.py  logging_config.py  settings.py
backend/rag_system/core/: __init__.py  document_loader.py  embeddings.py  text_processor.py  vector_store.py
backend/rag_system/integrations/: __init__.py  anthropic_client.py  gemini_client.py  google_drive.py  openai_client.py
backend/rag_system/models/: __init__.py  schemas.py
backend/rag_system/services/: __init__.py  llm_service.py  rag_service.py
backend/rag_system/utils/: __init__.py  constants.py  exceptions.py  helpers.py  wait_for_system.py
data/sample_documents/: sample_doc_1.txt  sample_doc_2.txt
docs/: api.md  architecture.md  setup.md
frontend/: app.py  index.html
frontend/css/: style.css
frontend/js/: api.js  auth.js  config.js  main.js  ui.js
frontend/pages/: 01_Query_System.py  02_System_Status.py  03_Ingest_Documents.py
frontend/static/: index.html  ingest.html  status.html
frontend/static/css/: style.css
frontend/static/js/: api.js  main.js
frontend/utils/: api_client.py
netlify/: __init__.py
netlify/functions/: __init__.py  generate_system_key.py  health.py  ingest.py  query.py
netlify/functions/utils/: auth.py  cache.py  config.py  embeddings.py  llm_clients.py  llm_service.py  rate_limiter.py  text_processor.py  vector_store.py
scripts/: benchmark.py  ingest_documents.py  manage_pinecone_index.py  setup_environment.sh
tests/: __init__.py  conftest.py
tests/test_api/: __init__.py  test_documents_endpoint.py  test_health_endpoint.py  test_query_endpoint.py
tests/test_core/: test_embeddings.py  test_text_processor.py  test_vector_store.py
tests/test_integrations/: __init__.py  test_anthropic_client.py  test_gemini_client.py  test_openai_client.py
tests/test_services/: test_llm_service.py  test_rag_service.py
